find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(CUDA)

SET(SIFTGPU_ENABLE_SERVER FALSE)
SET(SIFTGPU_ENABLE_OPENCL FALSE)
if(CUDA_FOUND)
  find_package(GLEW REQUIRED)
  SET(SIFTGPU_ENABLE_CUDA TRUE)
else()
  SET(SIFTGPU_ENABLE_CUDA FALSE)
endif()
SET(SIFTGPU_ENABLE_SSE TRUE)
SET(SIFTGPU_SSE_OPTIONS -march=core2 -mfpmath=sse)
SET(SIFTGPU_PREFER_GLUT TRUE)
SET(SIFTGPU_DISABLE_DEVIL TRUE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -Wno-deprecated" )

IF(SIFTGPU_ENABLE_SSE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=core2 -mfpmath=sse" )
ENDIF(SIFTGPU_ENABLE_SSE)
  
IF(SIFTGPU_PREFER_GLUT)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWINDOW_PREFER_GLUT" )
ENDIF(SIFTGPU_PREFER_GLUT)

IF(SIFTGPU_ENABLE_OPENCL)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCL_SIFTGPU_ENABLED" )
ENDIF(SIFTGPU_ENABLE_OPENCL)

IF(SIFTGPU_ENABLE_CUDA)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCUDA_SIFTGPU_ENABLED")
ENDIF()

IF(APPLE)
  SET(LIBS_SIFTGPU )
ELSE(APPLE)
  SET(LIBS_SIFTGPU glut GL X11 )
ENDIF(APPLE)

IF(SIFTGPU_DISABLE_DEVIL)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSIFTGPU_NO_DEVIL" )
ELSE(SIFTGPU_DISABLE_DEVIL)
  SET(LIBS_SIFTGPU ${LIBS_SIFTGPU} IL )
ENDIF(SIFTGPU_DISABLE_DEVIL)

if (GLEW_FOUND)
	include_directories( ${GLEW_INCLUDE_DIRS} )
	SET (GLEW_LIBRARIES GLEW)
else()
  SET (GLEW_LIBRARIES "")
endif (GLEW_FOUND)

SET(SRCS
  FrameBufferObject.cpp
  GlobalUtil.cpp
  GLTexImage.cpp
  ProgramGLSL.cpp 
  ProgramGPU.cpp
  ShaderMan.cpp
  SiftGPU.cpp
  SiftPyramid.cpp
  PyramidGL.cpp
  SiftMatch.cpp
)
if(SIFTGPU_ENABLE_CUDA)
  CUDA_ADD_LIBRARY(siftgpu SHARED
    ${SRCS}
    PyramidCU.cpp
    SiftMatchCU.cpp
    ProgramCU.cu
    CuTexImage.cpp
  )
else()
  ADD_LIBRARY(siftgpu SHARED
    ${SRCS}
  )
endif()

TARGET_LINK_LIBRARIES(siftgpu ${LIBS_SIFTGPU} ${GLEW_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} )

TARGET_INCLUDE_DIRECTORIES(siftgpu INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

INSTALL(FILES SiftGPU.h DESTINATION include)
INSTALL(TARGETS siftgpu EXPORT siftgpu-target DESTINATION lib )
INSTALL(EXPORT siftgpu-target DESTINATION shared/siftgpu/cmake)
